[gd_scene load_steps=6 format=3 uid="uid://bmiuujf7bbbcx"]

[ext_resource type="Script" uid="uid://b7htv288y22dn" path="res://Scenes/!Map/Tilemap/breakable.gd" id="1_noqkn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37mmn"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_qmx2t"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2.07053, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_m1sfb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqkvy"]
_data = {
&"Hit": SubResource("Animation_qmx2t"),
&"RESET": SubResource("Animation_m1sfb")
}

[node name="Breakable" type="Sprite2D"]
modulate = Color(0.903599, 0.903598, 0.903598, 1)
script = ExtResource("1_noqkn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_37mmn")
debug_color = Color(0.939459, 0.251749, 0, 0.431373)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qqkvy")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
